<resources>
    <string name="app_name">Test App</string>
    <string name="homeBtn1"><b>Timetable</b></string>
    <string name="homeBtn2"><b>Navigation</b></string>
    <string name="homeBtn3"><b>Dining</b></string>
    <string name="homeBtn4"><b>UL \n Life Hacks</b></string>
    <string name="homeBtn5"><b>Tools</b></string>
    <string name="homeBtn6"><b>Social</b></string>
    <string name="timetable">Timetable</string>
    <string name="navigation">Navigation</string>
    <string name="dining">Dining</string>
    <string name="ullifehacks">UL Life Hacks</string>
    <string name="tools">Tools</string>
    <string name="social">Social</string>
    <string name="lifeHackBtn1">Study Spots</string>
    <string name="lifeHackBtn2">Best Toilets</string>
    <string name="lifeHackBtn3">Parking</string>
    <string name="lifeHackBtn4">Bus Timetable</string>
    <string name="lifeHackBtn5">Shortcuts</string>
    <string name="lifeHackBtn6">Campus Scenery</string>
    <string name="chronometer_start">Start</string>
    <string name="chronometer_stop">Stop</string>
    <string name="chronometer_reset">Reset</string>
    <string name="chronometer_set_format">Set format string</string>
    <string name="chronometer_clear_format">Clear format string</string>
    <string name="title_activity_maps">Map</string>
    <!--<string name="chronometer_initial_format">Initial format: <xliff:g id="initial-format">%s</xliff:g></string>-->
    <!--AIzaSyBa6ToqiFP3YWqZRY5P8yAE42nYg_IS_FY-->
    <array name="buildings">
        <item>Building 1</item>
    </array>
    <string name="title_activity_map">Map</string>
</resources>


